04 Diferencias entre LET y VAR

--- a/04/index.html
+++ b/04/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>El uso de use strict</title>
+    <title>Diferencias entre LET y VAR</title>
 </head>
 <body>
-    <h1>Use strict</h1>
+    <h1>Diferencia entre LET y VAR</h1>
     <script src="var-let.js"></script>
 </body>
 </html>
