--- a/06/index.html
+++ b/06/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Constantes</title>
+    <title>Operadores Matematicos</title>
 </head>
 <body>
-<h1>Constantes</h1>
+<h1>Operadores Matematicos</h1>
 
 <script src="sentence-if.js"></script>
 </body>
